--- a/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
 <wb-module deploy-name="OpenWMS-common">
 <wb-resource deploy-path="/" source-path="/src"/>
+<wb-resource deploy-path="/" source-path="/test"/>
 </wb-module>
 </project-modules>
