--- a/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
@@ -4,5 +4,6 @@
 <wb-resource deploy-path="/" source-path="/src"/>
 <wb-resource deploy-path="/" source-path="/test"/>
 <wb-resource deploy-path="/" source-path="/spring"/>
+<wb-resource deploy-path="/" source-path="/src/META-INF"/>
 </wb-module>
 </project-modules>
