--- a/OpenWMS-common/branches/Spring/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/branches/Spring/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-<wb-module deploy-name="OpenWMS-common">
+<wb-module deploy-name="OpenWMS-common-Spring">
 <wb-resource deploy-path="/" source-path="/src"/>
 <wb-resource deploy-path="/" source-path="/test"/>
 <wb-resource deploy-path="/" source-path="/spring"/>
