Added flex sources from source path
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@219 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/trunk/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
 <wb-resource deploy-path="/" source-path="/src"/>
 <wb-resource deploy-path="/" source-path="/test"/>
 <wb-resource deploy-path="/" source-path="/src/META-INF"/>
-        <wb-resource deploy-path="/" source-path="/client/flex"/>
+        <wb-resource deploy-path="/" source-path="/client/flex/as3"/>
 </wb-module>
 </project-modules>
