--- a/OpenWMS-common/trunk/template/OpenWMS-codeTemplates.xml
+++ b/OpenWMS-common/trunk/template/OpenWMS-codeTemplates.xml
@@ -15,7 +15,7 @@
  */</template><template autoinsert="false" context="typecomment_context" deleted="false" description="Comment for created types" enabled="true" id="org.eclipse.jdt.ui.text.codetemplates.typecomment" name="typecomment">/**
  * A ${type_name}.
  * 
- * @author &lt;a href="openwms@googlemail.com"&gt;Heiko Scherrer&lt;/a&gt;
+ * @author &lt;a href="mailto:openwms@googlemail.com"&gt;Heiko Scherrer&lt;/a&gt;
  * @version $$Revision: 877 $$
  */</template><template autoinsert="true" context="fieldcomment_context" deleted="false" description="Comment for fields" enabled="true" id="org.eclipse.jdt.ui.text.codetemplates.fieldcomment" name="fieldcomment">/** The ${field} */</template><template autoinsert="false" context="methodcomment_context" deleted="false" description="Comment for non-overriding methods" enabled="true" id="org.eclipse.jdt.ui.text.codetemplates.methodcomment" name="methodcomment">/**
  * FIXME Comment this
