Added the TreeNode for the LocationGroup tree
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@274 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/org/openwms/client/business/Services.mxml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/org/openwms/client/business/Services.mxml
@@ -14,8 +14,8 @@
         destination="locationGroupService"
         showBusyCursor="true"/>
 -->
-<mx:RemoteObject id="locationService" endpoint="http://127.0.0.1:8380/OpenWMS/graniteamf/amf" destination="locationService" />
-<mx:RemoteObject id="locationGroupService" endpoint="http://127.0.0.1:8380/OpenWMS/graniteamf/amf" destination="locationGroupService" />
+<mx:RemoteObject id="locationService" endpoint="/OpenWMS/graniteamf/amf" destination="locationService" />
+<mx:RemoteObject id="locationGroupService" endpoint="/OpenWMS/graniteamf/amf" destination="locationGroupService" />
 <!--
 	<mx:HTTPService id="LocationGroupService" showBusyCursor="true" url="http://localhost:8380/OpenWMS/messagebroker/amf" />
 -->
