--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/main.mxml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/main.mxml
@@ -3,23 +3,28 @@
 	xmlns:business="org.openwms.client.business.*"
 	xmlns:control="org.openwms.client.control.*"
 	xmlns:view="org.openwms.client.view.*" 
-	layout="absolute" backgroundGradientAlphas="[1.0, 1.0]" backgroundGradientColors="[#FFFFFF, #FFFFFF]" width="1280" height="800">
+	layout="absolute" backgroundGradientAlphas="[1.0, 1.0]" backgroundGradientColors="[#FFFFFF, #FFFFFF]" creationComplete="init()">
 	
 	<!-- Styles -->
 	<mx:Style source="assets/css/main.css" />
+	<mx:Style source="assets/css/styles.css"/>
 
 	<!-- Scripts -->
 	<mx:Script>
 		<![CDATA[
 			import mx.controls.Alert;
 			import org.openwms.client.model.ModelLocator;
+			import org.openwms.client.event.SwitchScreenEvent;
+			import mx.events.MenuEvent;
 			[Bindable]
 			private var modelLocator:ModelLocator = ModelLocator.getInstance();
 
-			public function loadAllLocations():void {
-				trace("Function called");
-				//locationService.findAll();
-
+			public function init():void {
+				
+			}
+			
+			private function onMenuChange(event:MenuEvent):void {
+				new SwitchScreenEvent(event.item.@action).dispatch();
 			}
 		]]>
 	</mx:Script>
@@ -29,11 +34,41 @@
 	
 	<control:MainController />
 	
-	<mx:ViewStack id="myViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
-		<view:StartScreen />
-		<view:LocationView />
-		<view:LocationGroupView />
-	</mx:ViewStack>
+	<mx:VBox height="800" width="1280" verticalGap="0" backgroundColor="#C2DAEF">
+		<mx:HBox width="100%" height="100" verticalAlign="middle" backgroundColor="0x9fc3db" id="hbox1" horizontalGap="8">
+			<mx:Image source="assets/images/openwms_header_logo6.png"/>
+		</mx:HBox>
+		<mx:Canvas width="100%" height="30" backgroundColor="#FFFFFF" backgroundAlpha="0.5" >
+		<mx:MenuBar x="5" y="5" width="1270" height="20" labelField="@label" itemClick="onMenuChange(event)">
+			<mx:XMLList>
+            <menuitem label="Administration">
+                <menuitem label="SubMenuItem A-1" enabled="false"/>
+                <menuitem label="SubMenuItem A-2"/>
+            </menuitem>
+            <menuitem label="Stock Configuration">
+                <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
+                <menuitem label="Location Groups" action="{SwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}"/>
+            </menuitem>
+            <menuitem label="Monitoring"/>
+            <menuitem label="Management">
+                <menuitem label="Users + Roles"/>
+                <menuitem label="Security" 
+                    type="radio" groupName="one"
+                    selected="true"/>
+                <menuitem label="SubMenuItem D-3" 
+                    type="radio" groupName="one"/>
+            </menuitem>
+        	</mx:XMLList>
+		</mx:MenuBar>
+		</mx:Canvas>
+		<mx:ViewStack id="myViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
+			<view:StartScreen />
+			<view:LocationView />
+			<view:LocationGroupView />
+		</mx:ViewStack>
+	</mx:VBox>
+
+
 
 	
 </mx:Application>
