--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/org/openwms/client/business/Services.mxml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/src/org/openwms/client/business/Services.mxml
@@ -14,9 +14,7 @@
         destination="locationGroupService"
         showBusyCursor="true"/>
 -->
-<mx:RemoteObject id="locationService" endpoint="/OpenWMS/graniteamf/amf" destination="locationService" />
-<mx:RemoteObject id="locationGroupService" endpoint="/OpenWMS/graniteamf/amf" destination="locationGroupService" />
-<!--
-	<mx:HTTPService id="LocationGroupService" showBusyCursor="true" url="http://localhost:8380/OpenWMS/messagebroker/amf" />
--->
+<mx:RemoteObject id="locationService" endpoint="http://127.0.0.1:8380/OpenWMS/graniteamf/amf" destination="locationService" />
+<mx:RemoteObject id="locationGroupService" endpoint="http://127.0.0.1:8380/OpenWMS/graniteamf/amf" destination="locationGroupService" />
+
 </business:ServiceLocator>
