--- a/OpenWMS-common/trunk/OpenWMS-common/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/trunk/OpenWMS-common/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
 <wb-module deploy-name="OpenWMS-common">
-<wb-resource deploy-path="/" source-path="/src"/>
 <wb-resource deploy-path="/" source-path="/test"/>
-<wb-resource deploy-path="/" source-path="/src/META-INF"/>
+        <wb-resource deploy-path="/" source-path="/src/META-INF"/>
+        <wb-resource deploy-path="/" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
 </wb-module>
 </project-modules>
