--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.settings/org.eclipse.wst.common.component
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="OpenWMS-Flex-GraniteDS">
+    <wb-module deploy-name="OpenWMS">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/spring"/>
