--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/assets/css/styles.css
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/assets/css/styles.css
@@ -1,3 +1,14 @@
+/*
+ * OpenWMS, the Open Warehouse Management System
+ * 
+ * Distributable under LGPL license.
+ * See terms of license at gnu.org.
+ *
+ * Main colors:
+ * blue		: 2e7bb1
+ * yellow	: e1e76b 
+ *
+ */
 Button {
    highlightAlphas: 1, 0.33;
    fillAlphas: 1, 0.16, 0.18, 1;
