2891581 Fixed deployment problem, renamed class files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@480 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LoginView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LoginView.mxml
@@ -13,12 +13,12 @@
   backgroundAlpha="0.5">
 
   <mx:Metadata>
-    [Event(name="login", type="org.openwms.client.event.SecurityEvent")]
+    [Event(name="login", type="org.openwms.web.flex.client.event.SecurityEvent")]
   </mx:Metadata>
 
   <mx:Script>
     <![CDATA[
-      import org.openwms.client.event.SecurityEvent;
+      import org.openwms.web.flex.client.event.SecurityEvent;
       
       private function onClick( event:MouseEvent ):void {
         var SecurityEvent = new SecurityEvent("login");
