--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
@@ -9,7 +9,7 @@
 	
 	<mx:Script>
 	<![CDATA[
-		import org.openwms.client.model.ModelLocator;
+		import org.openwms.web.flex.client.model.ModelLocator;
 		//import com.af.clientmanager.model.vo.MediaVO;
 	    import mx.controls.Alert;
 	    import mx.effects.Blur;
