--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationGroupView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationGroupView.mxml
@@ -7,13 +7,13 @@
  * See terms of license at gnu.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:business="org.openwms.client.business.*" xmlns:o="org.openwms.client.components.*" width="1280" height="670" backgroundColor="#C2DAEF" creationComplete="init()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:business="org.openwms.web.flex.client.business.*" xmlns:o="org.openwms.web.flex.client.components.*" width="1280" height="670" backgroundColor="#C2DAEF" creationComplete="init()">
 	<!-- Scripts -->
 	<mx:Script>
 		<![CDATA[
-			import org.openwms.client.model.*;
+			import org.openwms.web.flex.client.model.*;
 			import org.openwms.common.domain.LocationGroup;
-			import org.openwms.client.event.LocationEvent;
+			import org.openwms.web.flex.client.event.LocationEvent;
 			import mx.collections.ArrayCollection;
 			import mx.events.*; 
 			[Bindable]
@@ -89,20 +89,24 @@
 	<mx:Tree id="myTree" x="10" y="10" showRoot="false" height="650" width="236" dataProvider="{modelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)">
 	</mx:Tree>
 	<o:SuperPanel width="250" height="250" layout="absolute" x="762" y="10" title="Fill Level" showControls="true" enableResize="true">
+<!-- 
 		<mx:PieChart x="0" y="0" id="piechart1" width="100%" height="100%">
 			<mx:series>
 				<mx:PieSeries displayName="Series 1" />
 			</mx:series>
 		</mx:PieChart>
 		<mx:Legend dataProvider="{piechart1}" width="230" height="30" y="180"/>
-	</o:SuperPanel>
+ -->
+ 	</o:SuperPanel>
 	<o:SuperPanel width="250" height="250" layout="absolute" x="1020" y="10" title="No of Transports" showControls="true" enableResize="true">
+<!-- 
 		<mx:ColumnChart x="0" y="0" id="columnchart1" height="100%" width="100%">
 			<mx:series>
 				<mx:ColumnSeries displayName="Series 1" yField=""/>
 			</mx:series>
 		</mx:ColumnChart>
-	</o:SuperPanel>
+ -->
+ 	</o:SuperPanel>
 	<o:SuperPanel x="254" y="10" width="500" height="214" layout="absolute" title="Details" showControls="true" enableResize="true">
 		<mx:CheckBox x="10" y="96" label="Group State In allowed"/>
 		<mx:CheckBox x="10" y="126" label="Group State Out allowed"/>
