--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationView.mxml
@@ -7,7 +7,7 @@
  * See terms of license at gnu.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:o="org.openwms.client.components.*" width="1280" height="670" backgroundColor="#C2DAEF" creationComplete="init()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:o="org.openwms.web.flex.client.components.*" width="1280" height="670" backgroundColor="#C2DAEF" creationComplete="init()">
 				<mx:Script>
 					<![CDATA[
 						import mx.controls.dataGridClasses.DataGridColumn;
@@ -15,11 +15,11 @@
 						import mx.utils.ArrayUtil;
 						import org.openwms.common.domain.*;
 						import mx.collections.ArrayCollection;
-						import org.openwms.client.event.LoadLocationGroupsEvent;
-						import org.openwms.client.business.LocationGroupDelegate;
+						import org.openwms.web.flex.client.event.LoadLocationGroupsEvent;
+						import org.openwms.web.flex.client.business.LocationGroupDelegate;
 						import mx.controls.List;
 						import mx.events.ListEvent;
-						import org.openwms.client.model.ModelLocator;
+						import org.openwms.web.flex.client.model.ModelLocator;
 						[Bindable]
 						private var modelLocator:ModelLocator = ModelLocator.getInstance();
 						[Bindable]
@@ -89,6 +89,7 @@
 					<mx:Text x="531" y="93" text="{selectedRow.locationType.description}" width="183"/>
 				</o:SuperPanel>
 				<o:SuperPanel width="250" height="250" layout="absolute" x="1020" y="10" title="No of Transports" showControls="true" enableResize="true">
+<!-- 
 					<mx:ColumnChart x="0" y="0" id="columnchart1" horizontalAxisRatio=".33" verticalAxisRatio=".99" height="100%" width="100%" dataProvider="{selectedRow.noMaxTransportUnits}">
 						<mx:series>
 							<mx:ColumnSeries displayName="Series 1"/>
@@ -97,13 +98,16 @@
 							<mx:CategoryAxis dataProvider="{selectedRow.noMaxTransportUnits}"  categoryField="Number"/>
 						</mx:horizontalAxis>
 					</mx:ColumnChart>
+ -->
 				</o:SuperPanel>
 				<o:SuperPanel width="250" height="250" layout="absolute" x="762" y="10" title="Fill Level" showControls="true" enableResize="true">
+<!-- 
 					<mx:PieChart x="0" y="0" id="piechart1" width="210" height="200">
 						<mx:series>
 							<mx:PieSeries displayName="Series 1" field=""/>
 						</mx:series>
 					</mx:PieChart>
+ -->
 				</o:SuperPanel>
 				<mx:Canvas x="10" y="268" width="1260" height="392">
 				<mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" width="100%" height="340" y="52" dataProvider="{modelLocator.allLocations}" itemClick="onRowClick(event)">
