--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
@@ -7,7 +7,7 @@
  * See terms of license at gnu.org.
  */
 -->
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:view="org.openwms.client.view.*" xmlns:management="org.openwms.client.view.management.*" xmlns:renderer="org.openwms.client.view.renderers.*" width="1280" height="670">
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:view="org.openwms.web.flex.client.view.*" xmlns:management="org.openwms.web.flex.client.view.management.*" xmlns:renderer="org.openwms.web.flex.client.view.renderers.*" width="1280" height="670">
 	<management:UserList />
 	<management:UserManagementContent />
 </mx:HBox>
