2891581 Added new dialogue to create transport orders, also setup new service binding
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@500 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -17,5 +17,6 @@
 <mx:RemoteObject id="locationService" destination="locationService" />
 <mx:RemoteObject id="locationGroupService" destination="locationGroupService" />
 <mx:RemoteObject id="userService" destination="userService" />
+<mx:RemoteObject id="transportService" destination="transportService" />
 
 </business:ServiceLocator>
